--- a/src/styles/ContentEditable.scss
+++ b/src/styles/ContentEditable.scss
@@ -6,12 +6,17 @@
     display: block;
     padding-block-start: 0.475em;
     padding-block-end: 0.275em;
-    min-height: 1em;
     &:focus {
+        outline-style: none;
+        margin: -$border_width;
         font-size: 1em;
         z-index: 5;
         background: $color_editable_bg;
         color: $color_editable_text;
         border: $border_width solid $color_editable_border;
+        &::selection{
+            background: $color_editable_border;
+            color: $color_editable_bg;
+        }
     }
 }
