--- a/src/styles/Statement.scss
+++ b/src/styles/Statement.scss
@@ -16,6 +16,12 @@
     background-color: aqua;
 }
 .statement {
+    ::selection{
+        background: $color_statement_text;
+        color: $color_statement_bg;
+        padding: .3em;
+    }
+    background: $color_statement_bg;
     color: $color_statement_text;
     box-sizing: border-box;
     position: relative;
@@ -24,7 +30,6 @@
     min-width: $statement_min_width;
     max-width: $statement_max_width;
     width: calc(100% + $border_width * 2);
-    background: $color_statement_bg;
     height: fit-content;
     margin-inline: auto;
     display: grid;
@@ -34,7 +39,7 @@
     margin-block-start: -$border_width;
     margin-block-end: calc($border_width / -4);
     &:hover:not(.switch) {
-        background: $color_statement_bg_highlight;
+        //background: $color_statement_bg_highlight;
     }
     & > .content {
         & > .editable {
