--- a/src/styles/ContentEditable.scss
+++ b/src/styles/ContentEditable.scss
@@ -6,6 +6,7 @@
     display: block;
     padding-block-start: 0.475em;
     padding-block-end: 0.275em;
+    padding-inline:.5ch;
     &:empty {
         background: rgba(0, 0, 0, .01);
         z-index: 2;
