scrolling behaviour correction

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,24 @@
 @import "./styles/variables";
+html {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
+  height: 100vh;
   font-size: 28px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: $color_page_bg;
-  overflow-x: hidden; // TEMPORARY
+  width: 100%;
+  overflow: auto;
+  #root{
+    padding-inline: calc($border_width * 2);
+  }
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
