--- a/src/styles/PreviewHandler.scss
+++ b/src/styles/PreviewHandler.scss
@@ -8,9 +8,10 @@
         font-size: 1.5em;
         background: transparent;
         position: fixed;
-        right: 0;
+        right: 1rem;
         top: 0;
         > .main {
+            z-index: 999 !important;
             display: block;
         }
         > .hover {
@@ -34,7 +35,7 @@
         & > .button-close {
             position: fixed;
             font-size: 0.9em;
-            right: 0.5em;
+            right: 1.725rem;
             top: 0.5em;
             border: 0;
             font-weight: bold;
