--- a/src/styles/Structogram.scss
+++ b/src/styles/Structogram.scss
@@ -40,6 +40,7 @@
         user-select: none;
     }
     > .json-view {
+        display: none;
         position: absolute;
         top: 100%;
         left: 0;
