playing with z-index

--- a/src/styles/PreviewHandler.scss
+++ b/src/styles/PreviewHandler.scss
@@ -5,6 +5,7 @@
         border: 0;
         padding: 0;
         cursor: pointer;
+        z-index: 9999 !important;
         font-size: 1.5em;
         background: transparent;
         position: fixed;
